# nemantix

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: 00 - Welcome to Nemantix.md  01 - Nemantix and Intentware.md  02 - Platform Overview.md  03 - NXS language.md  04 - Script Lifecycle.md  05 - Toolsets.md  05a - Toolset API Reference.md  05b - Builtin Toolsets.md  06 - Agents.md  06a - LLM Proxy.md  06b - Logging API.md  07 - EventHub.md  08 - Knowledge Base.md  09 - CLI.md  10 - NXS Formatting Standard.md
docs/formatting/: NXF001.md  NXF002.md  NXF003.md  NXF004.md  NXF005.md  NXF101.md  NXF201.md  NXF202.md  NXF401.md  NXF402.md  NXF501.md  NXF502.md
examples/: actions.nxs  builtin_toolsets.nxs  do_statement.nxs  loops.nxs  similarity.nxs  ticket.nxs  toolset.nxs
plugins/JetBrains/syntax-highlighter/: CHANGELOG.md  README.md  build.gradle.kts
plugins/VSCode/syntax-highlighter/: CHANGELOG.md  README.md  language-configuration.json  package.json  tsconfig.json
src/nemantix/builtin_toolsets/: __init__.py  collection_ops.py  json_ops.py  number_ops.py  regex_ops.py  string_ops.py
src/nemantix/cli/: __init__.py  _normalize.py  code.py  compile.py  format.py  keygen.py  knowledge.py  run.py  sign.py  verify.py
src/nemantix/common/: __init__.py  connectors.py  context.py  logger.py
src/nemantix/core/: __init__.py  agent.py  coder.py  custom_types.py  exceptions.py  executor.py  expertise.py  formatter.py  interpreter.py  node.py  nxs_v2_grammar.lark  parser.py  prompt.py  runtime.py  script.py  source_manager.py  symbol_table.py  tools.py
src/nemantix/hub/: __init__.py  (+8 more)
test/cli/: test_code.py  test_compile.py  test_format.py  test_keygen.py  test_knowledge.py  test_main.py  test_normalize.py  test_run.py  test_sign.py  test_verify.py
test/common/: test_connectors.py  test_logger.py  text_context.py
test/core/: conftest.py  test_agent.py  test_agent_integration.py  test_builtin_toolsets.py  test_coder.py  test_executor.py  test_expertise.py  test_formatter.py  test_formatting_rules.py  test_interpreter.py  test_nxs.py  test_parser.py  test_runtime.py  test_script.py  test_source_manager.py  test_symbol_table.py  test_to_nxs.py  test_tools.py
test/experimental/: test_stateful_agent.py
test/hub/: conftest.py  test_debugger.py  test_event_hub.py  test_observer.py  test_profiler.py  test_tracer.py
test/security/: test_security.py
test/stl/: conftest.py  test_audio.py  test_datetime.py  test_email.py  test_filesystem.py  test_mathematical.py  test_media.py  test_messaging.py  test_remotefileserver.py  test_requests.py  test_sql.py  test_web_search.py
tutorials/: README.md  environment-setup.md  llm-setup.md
tutorials/multi-agent-todo-tutorial/: tutorial.md
tutorials/weather-agent-tutorial/: tutorial.md
(+154 files in other folders)
