[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nemantix"
dynamic = ["version"]
description = "Nemantix: agentic AI."
readme = "README.md"
authors = [
    { name = "Kebula", email = "nemantix@kebula.it" }
]
requires-python = ">=3.12"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["nemantix"]
dependencies = [
    "numpy>=2.1.3",
    "pydantic~=2.12.5",
    "openai~=1.107.3",
    "google-genai~=1.36.0",
    "anthropic~=0.71.0",
    "lark~=1.2.2",
    "python-dotenv~=1.2.2",
    "cryptography~=46.0.3"
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers~=5.2.0",
    "staticvectors~=0.2.0",
]
stl = [
    "paramiko~=4.0.0",
    "ddgs~=9.10.0",
    "moviepy~=2.2.1",
    "sqlalchemy~=2.0.44",
    "sympy~=1.14.0"
]
debug = [
    "prompt_toolkit~=3.0.52"
]
dev = [
    "pytest~=8.4.2",
    "pytest-cov~=5.0.0",
    "pyftpdlib~=2.2.0",
    "ruff~=0.15.4",
    "mypy~=1.19.1",
    "psutil~=7.1.3"
]
knowledge = [
    "qdrant-client~=1.17.1",
    "redis~=7.4.0",
    "sqlalchemy~=2.0.44",
    "SQLAlchemy-Utils~=0.42.1",
    "pymilvus~=3.0.0",
    "networkx~=3.6.1",
    "faiss-cpu~=1.13.2",
    "nemantix[embeddings]"
]
observer = [
    "psutil~=7.1.3"
]
llm_extra = [
    "outlines~=1.2.13",
    "llama-cpp-python~=0.3.23",
]
aws = [
    "boto3>=1.34.0",
]
all = [
    "nemantix[embeddings,stl,debug,dev,knowledge,observer,aws]"
]

[project.scripts]
nemantix = "nemantix.cli:main"

[project.entry-points.nemantix]
run = "nemantix.cli.run:register"
code = "nemantix.cli.code:register"
sign = "nemantix.cli.sign:register"
verify = "nemantix.cli.verify:register"
keygen = "nemantix.cli.keygen:register"
knowledge = "nemantix.cli.knowledge:register"

[project.urls]
Documentation = "https://github.com/kebula-it/nemantix#readme"
Source = "https://github.com/kebula-it/nemantix"
Tracker = "https://github.com/kebula-it/nemantix/issues"

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nemantix", "nemantix.*"]

[tool.setuptools.package-data]
nemantix = ["core/nxs_v2_grammar.lark"]

[tool.ruff.lint.per-file-ignores]
"test/stl/*" = ["F401"]

[tool.ruff]
exclude = [".git", "__pycache__", "examples", "plugins"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.setuptools_scm]
